# Home_work_web_12

./: main.py  pyproject.toml
src/conf/: config.py
src/entity/: models.py
src/services/: auth.py
